argocd/internal/grafana/resources/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-dev-virtualservice
  namespace: internal
spec:
  hosts:
    - grafana-dev.willyhu.tw
  gateways:
    - grafana-dev-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana
            port:
              number: 80
